# tenso-rs

./: -  .gitignore  ;  Cargo.toml  LICENSE  README.md
artifacts/: metadata.scale
resources/testkey/: coldkey  coldkeypub.txt
src/: lib.rs  main.rs
src/commands/: create_coldkey.rs  error.rs  mod.rs  transfer.rs
src/config/: error.rs  mod.rs
src/keyfiles/: error.rs
src/keystore/: cli.rs  encryption.rs  error.rs  mod.rs
src/subtensor/: interface.rs
