[package]
name = "tensors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures = "0.3.28"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.4.6", features = ["derive", "cargo"] }
figment = { version = "0.10", features = ["toml", "env"] }
subxt = "0.34.0"
subxt-signer = "0.34.0"
hex = "0.4.3"
bip39 = { package = "parity-bip39", version = "2.0.1", features = ["rand"] }
sc-cli = "0.38.0"
sp-core = "30.0.0"
rpassword = "7.3.1"
sc-service = "0.37.0"
sp-runtime = "33.0.0"
dialoguer = "0.11.0"
